# DlibAndroid

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/orange/dlibandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dlib_native.cpp  java_models.h  test.cpp
app/src/main/java/com/orange/dlibandroid/: CameraActivity.kt  MainActivity.kt  Test.java
app/src/main/java/com/orange/dlibandroid/camera2/: AutoFitTextureView.java  Camera2Activity.java  Camera2BasicFragment.java  Camera2Fragment.java
app/src/main/java/com/orange/dlibandroid/detect/: FaceDetecter.java  FaceRect.java
app/src/main/java/com/orange/dlibandroid/widget/: CoverView.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_camera.xml  activity_camera2.xml  activity_main.xml  fagment_camera.xml  fragment_camera2.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-v19/: styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/com/orange/dlibandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
